fixed safari font + stuck on ecom cart

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -501,11 +501,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.spencer{
+.spencer {
   background: red;
   position: relative;
   display: flex;
-  text-align: center
+  text-align: center;
 }
 
 .spencer:hover {
@@ -806,7 +806,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-:root{
+:root {
   --slateGreen: #486e65;
 }
 
@@ -842,8 +842,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: "Sentinel SemiBoldItal";
 
   font-display: swap;
-
-  font-style: italic;
 
   font-weight: 600;
 
