--- a/styles/app.css
+++ b/styles/app.css
@@ -5,47 +5,46 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
-    --slateGreen: #486e65;
+:root {
+  --slateGreen: #486e65;
 }
 
 @font-face {
-    font-family: "Sentinel Book";
-    font-display: swap;
-    font-style: normal;
-    font-weight: 400;
-    src: url("/fonts/sentinel/Sentinel-Book.woff") format("woff");
-    src: url("/fonts/sentinel/Sentinel-Book.woff2") format("woff2");
+  font-family: "Sentinel Book";
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/sentinel/Sentinel-Book.woff") format("woff");
+  src: url("/fonts/sentinel/Sentinel-Book.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: "Sentinel SemiBold";
-    font-display: swap;
-    font-style: normal;
-    font-weight: 600;
-    src: url("/fonts/sentinel/Sentinel-Semibold.woff") format("woff");
-    src: url("/fonts/sentinel/Sentinel-Semibold.woff2") format("woff2");
+  font-family: "Sentinel SemiBold";
+  font-display: swap;
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/sentinel/Sentinel-Semibold.woff") format("woff");
+  src: url("/fonts/sentinel/Sentinel-Semibold.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: "Sentinel SemiBoldItal";
-    font-display: swap;
-    font-style: italic;
-    font-weight: 600;
-    src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff") format("woff");
-    src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff2") format("woff2");
+  font-family: "Sentinel SemiBoldItal";
+  font-display: swap;
+  font-weight: 600;
+  src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff") format("woff");
+  src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff2") format("woff2");
 }
 
 @layer components {
-    .btn {
-        @apply py-2 px-4 font-semibold rounded-lg shadow-lg;
-    }
-    .btn-sky {
-        @apply text-white bg-sky-500 hover:bg-sky-700;
-    }
-    .spencer{
-        background: red;
-        @apply relative flex text-center
-        hover:text-blue-500
-    }
+  .btn {
+    @apply py-2 px-4 font-semibold rounded-lg shadow-lg;
+  }
+  .btn-sky {
+    @apply text-white bg-sky-500 hover:bg-sky-700;
+  }
+  .spencer {
+    background: red;
+    @apply relative flex text-center
+        hover:text-blue-500;
+  }
 }
